--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -123,6 +123,15 @@
 	            <input type="radio" name="privateChatDisabled" value="0" ng-checked="data.privateChatDisabled == 0" ng-model="data.privateChatDisabled">No
 	        </label>
        </div>
+       <div class="form-group">
+	        <label>Update empty reminder date &nbsp;&nbsp;</label>
+	        <label class="radio-inline">
+	            <input type="radio" name="updateEmptyReminderDate" value="1" ng-checked="data.updateEmptyReminderDate == 1" ng-model="data.updateEmptyReminderDate">Yes
+	        </label>
+	        <label class="radio-inline">
+	            <input type="radio" name="updateEmptyReminderDate" value="0" ng-checked="data.updateEmptyReminderDate == 0" ng-model="data.updateEmptyReminderDate">No
+	        </label>
+       </div>
 	</div>
 	<div class="col-md-6" style="margin-top: 15px; color: #337AB7;" ng-show="group0">
 		<div class="panel panel-default">
