--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -82,10 +82,10 @@
 
 <div class="row" ng-hide="isKYS">
 	<div id="detail" class="col-xs-12">
-		<div style="background-color: #356190; margin-bottom: 1px; height: 238px; overflow-y: auto;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
+		<div style="background-color: #356190; margin-bottom: 1px; height: 262px; overflow-y: auto;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
 			<div ng-repeat="f in fieldName" class="col-xs-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
 				<div class="col-xs-5" 
-					 style="padding: 1px 5px 0 0; text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word; cursor: pointer;"
+					 style="padding: 5px 5px 0 0; text-align: right; margin: 0; min-height: 42px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word; cursor: pointer;"
 					 ng-click="showMore(f, detail)">
 					<span>{{ f.columnNameAlias || f.columnName }}</span>
 				</div>
@@ -95,7 +95,7 @@
 				     <div ng-style="f.colorBg ? {'display': 'inline-block'} : '' ">
 						 <span ng-class="{label: f.colorBg}" 
 						 	   style="display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis; text-align: left; position: absolute;"
-						       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding': '0 3px 0px 3px', 'min-height': '23px', 'max-height': '35px', 'line-height': '1.32999999', 'top':'1px'} : f.colorFont ? {'color': f.colorFont} : '' ">
+						       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding': '4px 3px 0px 3px', 'min-height': '23px', 'max-height': '39px', 'line-height': '1.32999999', 'top':'1px'} : f.colorFont ? {'color': f.colorFont} : {'padding': '4px 0 0 0'} ">
 								   {{ 
 									   f.dataType == 'sys_owner' ? detail[f.columnName][0].showname :
 									   f.dataType == 'date' ? (detail[f.columnName] | date:gb_dateFormat) : 
