Add new feature : SMS Sender

--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -83,7 +83,7 @@
 									
 									
 									<div class="form-group" ng-class="{'has-error': profileForm.image.$invalid}">
-										<label class="control-label">ภาพถ่ายหน้าตรง</label>
+										<label class="control-label">รูป (Thumbnail)</label>
 										<code style="position: absolute; right: 15px;"><em>*ไม่เกิน 1 MB</em></code>
 										<input tabindex="9" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
 										       ng-model="data.imgUpload" maxsize="1000" base-sixty-four-input accept=".png,.jpg,.gif" />
