--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -175,6 +175,32 @@
 				</button>
 			  </div>
 		</div>
+		
+		<div class="panel panel-default">
+			  <div class="panel-heading">
+			      SMS Messages
+			  </div>
+			  <div class="panel-body">
+				<div class="form-group" ng-repeat="field in data.smsMessages">
+					<div class="well">
+						<div class="form-group input-group" style="margin-bottom: 3px;">
+							<span class="input-group-addon">Name</span>
+							<input type="text" class="form-control" ng-model="field.fieldName">						
+							<span class="input-group-addon"><i class="fa fa-times" style="color: red; cursor: pointer;" title="ลบ" ng-click="deleteSmsMessage($index)"></i></span>
+						</div>
+						<div class="form-group input-group">
+							<span class="input-group-addon">Value</span>
+							<textarea rows="3" class="form-control" ng-model="field.fieldValue" style="resize: vertical;"></textarea>
+						</div>
+					</div>
+				</div>
+				<button type="button" class="btn btn-primary pull-right" title="เพิ่ม" style="padding: 5px 10px 5px 10px;" ng-click="addSmsMessage()">
+					<i class="fa fa fa-plus fa-1x"></i>
+				</button>
+			  </div>
+		</div>
+		
+		
 	</div>
 	<div class="col-md-12" style="text-align: center;">
 		<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
