--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -19,14 +19,7 @@
 							
 								<div class="row">
 									<div class="col-md-12">
-									
-									  <div class="form-group input-group">
-									  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
-									  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in users" ng-change="search()">
-											<option value="">--ทั้งหมด--</option>
-								  		</select>
-									  </div>
-									  
+										
 									  <div class="form-group input-group">
 									  	<span class="input-group-addon">สถานะ</span>
 									  	<select name="column" class="form-control" ng-model="formData.status" ng-options="option.val as option.name for option in status" ng-change="search()"></select>
@@ -50,7 +43,7 @@
 									  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 									  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 									  <div class="pull-right">
-									  	<i class="fa fa-print fa-2x user-action-icon-primary" ng-show="group2 || !isDisableNoticePrint" ng-click="printBatchNotice()" title="พิมพ์"></i>
+									  	<i class="fa fa-paper-plane fa-2x user-action-icon-primary" ng-show="group2 || !isDisableNoticePrint" ng-click="printBatchNotice()" title="ส่ง SMS"></i>
 									  </div>
 									</div>
 								</div>
@@ -79,75 +72,41 @@
 						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
 								<tr>
-									<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
+									<th style="white-space: nowrap; text-align: center; color: #337AB7; width: 10px;">#</th>
 									
-									<th style="white-space: nowrap; text-align: center; color: #337AB7; padding: 0;" ng-style="group2 ? {'background-color': 'rgb(236, 207, 19)'} : {'background-color': 'rgb(249, 242, 198)'}">
-										<button ng-show="group2" type="button" style="margin-bottom: 5px;" title="{{ isAllChk ? 'ล้างทั้งหมด' : 'เลือกทั้งหมด'}}" ng-click="trigerAllChk()">
-											<i class="fa fa-lg" style="color: #229954" ng-class="{'fa-square-o': !isAllChk, 'fa-check-square-o': isAllChk}"></i>
-										</button>
-										<button ng-show="group2" type="button" style="margin-bottom: 5px;" title="เปลี่ยนสถานะเป็น พิมพ์แล้ว" ng-click="changeStatus(true)">
-											<i class="fa fa-star fa-lg" style="color: #229954"></i>
-										</button>
-										<button ng-show="group2" type="button" style="margin-bottom: 5px;" title="เปลี่ยนสถานะเป็น ยังไม่พิมพ์" ng-click="changeStatus(false)">
-											<i class="fa fa-star fa-lg" style="color: #858482"></i>
-										</button>
+									<th style="white-space: nowrap; text-align: center; color: #337AB7; width: 10px;">
+										สถานะ
+									</th>
+									
+									<th style="white-space: nowrap; text-align: center; width: 10px;">
+										วันที่ส่ง
 									</th>
 									
 									<th style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder('createdDateTime')" style="padding-left: 30px; padding-right: 30px; position: relative;">
-											วันที่ส่ง&nbsp;
-											<i ng-class="{'comm-order-active': ('createdDateTime' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-											<i ng-class="{'comm-order-active': ('createdDateTime' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
-										</a>
+										ข้อความ
 									</th>
 									
-									<th style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder('noticeName')" style="padding-left: 30px; padding-right: 30px; position: relative;">
-											ข้อความ&nbsp;
-											<i ng-class="{'comm-order-active': ('noticeName' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-											<i ng-class="{'comm-order-active': ('noticeName' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
-										</a>
-									</th>
-									
-									<th style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder('createdByName')" style="padding-left: 30px; padding-right: 30px; position: relative;">
-											ชื่อผู้สั่งพิมพ์&nbsp;
-											<i ng-class="{'comm-order-active': ('createdByName' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-											<i ng-class="{'comm-order-active': ('createdByName' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
-										</a>
+									<th style="white-space: nowrap; text-align: center; width: 10px;">
+										ชื่อผู้ส่ง
 									</th>
 									
 									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
-											{{ h.columnNameAlias || h.columnName }}&nbsp;
-											<i class="fa fa-sort-desc fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'desc')}" style="position: absolute; top: 2px;"></i>
-											<i class="fa fa-sort-up fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'asc')}" style="position: absolute; top: 2px;"></i>
-										</a>
+										{{ h.columnNameAlias || h.columnName }}
 									</th>
 								</tr>
 							<thead>
 							<!-- <tbody class="noselect"> -->
 							<tbody>
-								<tr ng-repeat="data in noticeToPrints track by $index" style="color: #337AB7;">
+								<tr ng-repeat="data in smses track by $index" style="color: #337AB7;">
 									<td style="vertical-align: middle; text-align: center;">
 										{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
 									</td>
 									
-									<td style="vertical-align: middle; white-space: nowrap; background-color: rgb(249, 242, 198);">
-										&nbsp;
-										<input ng-show="group2" type="checkbox" ng-model="data.isChk">&nbsp;
-										
-										<i class="fa fa-lg fa-star" ng-style="data.printStatus ? {'color': '#229954'} : {'color': '#858482'}">&nbsp;</i>
-										
-										<i class="fa fa-print fa-lg user-action-icon-primary" ng-show="group2 || !isDisableNoticePrint" ng-click="printNotice(data['_id'])" title="พิมพ์">&nbsp;</i>
-										
-										<i class="fa fa-times fa-lg user-action-icon-danger" ng-show="(data['sys_owner_id'][0] == userId) || group2"
-										   ng-click="deleteItem(data['_id'])" title="ลบ"></i>
-										&nbsp;   
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">
+										<i class="fa" ng-class="{'fa-minus': data.status == 0, 'fa-check ': data.status == 1}"></i>
 									</td>
-									
-									<td style="vertical-align: middle; white-space: nowrap;">{{ data['createdDateTime'] | date:gb_dateTimeFormat }}</td>
-									<td style="vertical-align: middle; white-space: nowrap;">{{ data['noticeName'] }}</td>
+									<td style="vertical-align: middle; white-space: nowrap;">{{ data['sentDateTime'] | date:gb_dateTimeFormat }}</td>
+									<td style="vertical-align: middle; white-space: nowrap;">{{ data.message }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data['address'] }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ createdByLog == 1 ? data.dummyCreatedBy : data['createdByName'] }}</td>									
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
