--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -178,7 +178,7 @@
 		
 		<div class="panel panel-default">
 			  <div class="panel-heading">
-			      SMS Messages
+			      <input type="checkbox" ng-model="data.isSmsEnable" />&nbsp;SMS Messages
 			  </div>
 			  <div class="panel-body">
 				<div class="form-group" ng-repeat="field in data.smsMessages">
