--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -82,6 +82,10 @@
 										วันที่ส่ง
 									</th>
 									
+									<th style="white-space: nowrap; text-align: center; width: 10px;">
+										เบอร์ที่ส่ง
+									</th>
+									
 									<th style="white-space: nowrap; text-align: center;">
 										ข้อความ
 									</th>
