--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -112,6 +112,9 @@
 		<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 			<thead>
 				<tr>
+					<th style="white-space: nowrap; text-align: center; color: #337AB7;">
+						&nbsp;&nbsp;&nbsp;<input type="checkbox" ng-model="chk.selectorAll" ng-click="chk.selectAll($event)" />&nbsp;&nbsp;&nbsp;
+					</th>
 					<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 					<th style="white-space: nowrap; text-align: center;">
 						<a href="" ng-click="columnOrder('sys_traceDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
@@ -155,6 +158,9 @@
 				<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" style="cursor: pointer; color: #337AB7;" 
 					ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3, 'comm-text-font-weight-active': data.id == idActive}">
 					
+					<td style="vertical-align: middle; text-align: center;" ng-click="chk.smsSelect($event, data)">
+						<input type="checkbox" ng-model="data.selector" />
+					</td>
 					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">
 						<i class="fa fa-hand-o-right" ng-show="data.id == idActive"></i>
 							{{ data.rowIndex = ($index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage)) }}
