--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -31,6 +31,13 @@
 		                    	   ng-disabled="!formData.dateColumnName"
 		                    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" date-parser="dd/MM/yyyy HH:mm" />
 					  </div>
+					  
+					  <div class="dropdown pull-right" ng-if="isSmsEnable">
+					      <button class="btn btn-outline btn-primary" type="button" ng-disabled="chk.selected.size == 0" ng-click="sms.addSmsList()">
+					        [{{ chk.selected.size }}]&nbsp;<i class="fa fa-envelope"></i> เพิ่มรายการส่ง SMS
+					      </button>
+				      </div>
+					  
 				   </div>
 			   </div>
 			   
@@ -112,7 +119,7 @@
 		<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 			<thead>
 				<tr>
-					<th style="white-space: nowrap; text-align: center; color: #337AB7;">
+					<th style="white-space: nowrap; text-align: center; color: #337AB7;" ng-if="isSmsEnable">
 						&nbsp;&nbsp;&nbsp;<input type="checkbox" ng-model="chk.selectorAll" ng-click="chk.selectAll($event)" />&nbsp;&nbsp;&nbsp;
 					</th>
 					<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
@@ -158,7 +165,7 @@
 				<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" style="cursor: pointer; color: #337AB7;" 
 					ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3, 'comm-text-font-weight-active': data.id == idActive}">
 					
-					<td style="vertical-align: middle; text-align: center;" ng-click="chk.smsSelect($event, data)">
+					<td style="vertical-align: middle; text-align: center;" ng-click="chk.smsSelect($event, data)" ng-if="isSmsEnable">
 						<input type="checkbox" ng-model="data.selector" />
 					</td>
 					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">
