--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -86,6 +86,10 @@
 										เบอร์ที่ส่ง
 									</th>
 									
+									<th style="white-space: nowrap; text-align: center; width: 10px;">
+										Error Message
+									</th>
+									
 									<th style="white-space: nowrap; text-align: center;">
 										ข้อความ
 									</th>
@@ -110,6 +114,7 @@
 										<i class="fa" ng-class="{'fa-minus': data.status == 0, 'fa-check ': data.status == 1}"></i>
 									</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data['sentDateTime'] | date:gb_dateTimeFormat }}</td>
+									<td style="vertical-align: middle; white-space: nowrap;">ไม่พบเบอร์ปลายทาง</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.message }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data['address'] }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ createdByLog == 1 ? data.dummyCreatedBy : data['createdByName'] }}</td>									
