--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -33,8 +33,8 @@
 					  </div>
 					  
 					  <div class="dropdown pull-right" ng-if="isSmsEnable">
-					      <button class="btn btn-outline btn-primary" type="button" ng-disabled="chk.selected.size == 0" ng-click="sms.addSmsList()">
-					        [{{ chk.selected.size }}]&nbsp;<i class="fa fa-envelope"></i> เพิ่มรายการส่ง SMS
+					      <button class="btn btn-outline btn-primary" type="button" title="เพิ่มรายการส่ง SMS" ng-disabled="chk.selected.size == 0" ng-click="sms.addSmsList()">
+					        [{{ chk.selected.size }}]&nbsp;<i class="fa fa-envelope"></i>
 					      </button>
 				      </div>
 					  
