--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -119,7 +119,7 @@
 									</td>
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">
-										<i class="fa" ng-class="{'fa-envelope status-success': data.status == 1, 'fa-exclamation-triangle status-fail': data.status == 2}"></i>
+										<i class="fa" ng-class="{'fa-envelope-o': data.status == 0, 'fa-envelope-open status-success': data.status == 1, 'fa-exclamation-triangle status-fail': data.status == 2}"></i>
 									</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data['sentDateTime'] | date:gb_dateTimeFormat }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">ไม่พบเบอร์ปลายทาง</td>
