--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -105,7 +105,7 @@
 										ชื่อผู้ส่ง
 									</th>
 									
-									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
+									<th ng-repeat="h in headers|filter:'!sys_sms_number'" style="white-space: nowrap; text-align: center;">
 										{{ h.columnNameAlias || h.columnName }}
 									</th>
 								</tr>
@@ -121,15 +121,14 @@
 										<i class="fa" ng-class="{'fa-envelope-o': data.status == 0, 'fa-envelope-open status-success': data.status == 1, 'fa-exclamation-triangle status-fail': data.status == 2}"></i>
 									</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data['sentDateTime'] | date:gb_dateTimeFormat }}</td>
-									<td style="vertical-align: middle; white-space: nowrap;"></td>
+									<td style="vertical-align: middle; white-space: nowrap;">{{ data.taskDetail.sys_sms_number }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;"></td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.messageField }}: {{ data.message }}</td>
-									<td style="vertical-align: middle; white-space: nowrap;">{{ data.createdBy }}</td>
-									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
+									<td style="vertical-align: middle; white-space: nowrap;">{{ data.createdByName }}</td>
+									<td ng-repeat="h in headers|filter:'!sys_sms_number'" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
-										   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
-										   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
-										   h.dataType == 'sys_owner' ? (data.dummyCreatedBy = data[h.columnName]) : data[h.columnName] 
+										   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:gb_dateFormat) : 
+										   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : data.taskDetail[h.columnName]
 										}}
 									</td>
 								</tr>
