--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -47,7 +47,7 @@
 									  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 									  
 									  <div class="pull-right">
-									      <button class="btn btn-warning" type="button" title="ส่ง SMS" ng-disabled="totalItems == 0">
+									      <button class="btn btn-warning" type="button" title="ส่ง SMS" ng-disabled="totalItems == 0" ng-show="formData.status != 1">
 									        [{{ totalItems }}]&nbsp;<i class="fa fa-envelope-open"></i>
 									      </button>
 								      </div>
@@ -85,7 +85,7 @@
 										สถานะ
 									</th>
 									
-									<th style="white-space: nowrap; text-align: center; width: 10px;">
+									<th style="white-space: nowrap; text-align: center; width: 10px;" ng-show="formData.status != 0">
 										วันที่ส่ง
 									</th>
 									
@@ -93,7 +93,7 @@
 										เบอร์ที่ส่ง
 									</th>
 									
-									<th style="white-space: nowrap; text-align: center; width: 10px;">
+									<th style="white-space: nowrap; text-align: center; width: 10px;" ng-show="formData.status == 2">
 										Error Message
 									</th>
 									
@@ -120,9 +120,9 @@
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">
 										<i class="fa" ng-class="{'fa-envelope-o': data.status == 0, 'fa-envelope-open status-success': data.status == 1, 'fa-exclamation-triangle status-fail': data.status == 2}"></i>
 									</td>
-									<td style="vertical-align: middle; white-space: nowrap;">{{ data['sentDateTime'] | date:gb_dateTimeFormat }}</td>
+									<td style="vertical-align: middle; white-space: nowrap;" ng-show="formData.status != 0">{{ data['sentDateTime'] | date:gb_dateTimeFormat }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.taskDetail.sys_sms_number }}</td>
-									<td style="vertical-align: middle; white-space: nowrap;"></td>
+									<td style="vertical-align: middle; white-space: nowrap;" ng-show="formData.status == 2"> Error </td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.messageField }}: {{ data.message }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.createdByName }}</td>
 									<td ng-repeat="h in headers|filter:'!sys_sms_number'" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
