--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -133,7 +133,7 @@
 									<td style="vertical-align: middle; white-space: nowrap;">
 										{{ formData.status == 0 ? (data['createdDateTime'] | date:gb_dateTimeFormat) : (data['sentDateTime'] | date:gb_dateTimeFormat) }}
 									</td>
-									<td style="vertical-align: middle; white-space: nowrap;">{{ data.taskDetail.sys_sms_number }}</td>
+									<td style="vertical-align: middle; white-space: nowrap;">{{ data.taskDetailFull.sys_sms_number }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;" ng-show="formData.status == 2"> Error </td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.messageField }}: {{ data.message }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.createdByName }}</td>
