--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -246,7 +246,7 @@
 							  <div class="col-xs-6">
 								<div class="form-group">
 									<label class="control-label">วันนัดชำระ | ยอดนัดชำระ</label>
-									<div class="input-group input-daterange">
+									<div class="input-group">
 					                    <input ng-model-options="{ updateOn: 'blur' }" name="appointDate" type='text' class="form-control input-sm dtPicker" style="width: 130px; font-size: 0.9em;" 
 					                    	   ng-model="askModalObj.trace.appointDate" date-parser="dd/MM/yyyy HH:mm" />
 									  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
@@ -257,7 +257,7 @@
 							  <div class="col-xs-6">					  
 								<div class="form-group">
 									<label class="control-label">วันนัด Call</label>
-								    <div class="input-group input-daterange">
+								    <div class="input-group">
 					                    <input name="nextTimeDate" type='text' class="form-control input-sm dtPicker" style="font-size: 0.9em;" 
 					                    	   ng-model="askModalObj.trace.nextTimeDate" date-parser="dd/MM/yyyy HH:mm" />
 									  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
