--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -53,6 +53,9 @@
 									      <button class="btn btn-warning" type="button" title="ส่ง SMS" ng-disabled="totalItems == 0" ng-show="formData.status != 1">
 									        [{{ totalItems }}]&nbsp;<i class="fa fa-envelope-open"></i>
 									      </button>
+									      <button class="btn btn-outline btn-primary" type="button" ng-click="getReport()">
+										        <i class="fa fa-download"></i> Export
+									      </button>
 								      </div>
 									  
 									</div>
