--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -5,6 +5,9 @@
 	.status-fail {
 		color: red;
 	}
+	.custom.ng-hide { 
+		display: none !important 
+	}
 </style>
 <div>
 	<div class="row">
@@ -53,7 +56,7 @@
 									      <button class="btn btn-warning" type="button" title="ส่ง SMS" ng-disabled="totalItems == 0" ng-show="formData.status != 1">
 									        [{{ totalItems }}]&nbsp;<i class="fa fa-envelope-open"></i>
 									      </button>
-									      <button class="btn btn-outline btn-primary" type="button" ng-click="getReport()">
+									      <button class="btn btn-outline btn-primary custom" type="button" ng-show="formData.status == 1" ng-click="getReport()">
 										        <i class="fa fa-download"></i> Export
 									      </button>
 								      </div>
