--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -53,7 +53,7 @@
 									      <button class="btn btn-danger" type="button" title="ลบ" ng-disabled="totalItems == 0" ng-show="formData.status != 1 && chk.selected.size > 0" ng-click="remove()">
 									        [{{ chk.selected.size }}]&nbsp;<i class="fa fa-trash"></i>
 									      </button>
-									      <button class="btn btn-warning" type="button" title="ส่ง SMS" ng-disabled="totalItems == 0" ng-show="formData.status != 1">
+									      <button class="btn btn-warning" type="button" title="ส่ง SMS" ng-disabled="totalItems == 0" ng-show="formData.status != 1" ng-click="sendSms()">
 									        [{{ totalItems }}]&nbsp;<i class="fa fa-envelope-open"></i>
 									      </button>
 									      <button class="btn btn-outline btn-primary custom" type="button" ng-show="formData.status == 1" ng-click="getReport()">
