--- a/backend/src/main/webapp/app/views/sms/sms_result.html
+++ b/backend/src/main/webapp/app/views/sms/sms_result.html
@@ -11,6 +11,16 @@
 	<tr>
 		<td style="text-align: right; padding-right: 3px"><strong>ไม่สำเร็จ :</strong></td>
 		<td>{{smsFailAmt}}  รายการ</td>
-		<td></td>
+	</tr>
+	<tr>
+		<td colspan="3">&nbsp;</td>
+	</tr>
+	<tr>
+		<td style="white-space: nowrap; text-align: right; padding-right: 3px"><strong>Credit ที่เหลือ :</strong></td>
+		<td colspan="2">{{ smsCredit }}</td>
+	</tr>
+	<tr>
+		<td style="text-align: right; padding-right: 3px">Credit ที่ใช้ไป :</td>
+		<td colspan="2">{{ smsCreditUsage }}</td>
 	</tr>
 </table>
