--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -140,7 +140,7 @@
 										{{ formData.status == 0 ? (data['createdDateTime'] | date:gb_dateTimeFormat) : (data['sentDateTime'] | date:gb_dateTimeFormat) }}
 									</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.taskDetailFull.sys_sms_number }}</td>
-									<td style="vertical-align: middle; white-space: nowrap;" ng-show="formData.status == 2"> Error </td>
+									<td style="vertical-align: middle; white-space: nowrap;" ng-show="formData.status == 2">{{ data.respMessage }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.messageField }}: {{ data.message }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data.createdByName }}</td>
 									<td ng-repeat="h in headers|filter:'!sys_sms_number'" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
