--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -88,7 +88,7 @@
 						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
 								<tr>
-									<th style="white-space: nowrap; text-align: center; color: #337AB7;" ng-show="formData.status != 1">
+									<th style="white-space: nowrap; text-align: center; color: #337AB7; width: 10px;" ng-show="formData.status != 1">
 										&nbsp;&nbsp;&nbsp;<input type="checkbox" ng-model="chk.selectorAll" ng-click="chk.selectAll($event)" />&nbsp;&nbsp;&nbsp;
 									</th>
 									<th style="white-space: nowrap; text-align: center; color: #337AB7; width: 10px;">#</th>
