--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -119,7 +119,7 @@
 		<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 			<thead>
 				<tr>
-					<th style="white-space: nowrap; text-align: center; color: #337AB7;" ng-if="isSmsEnable">
+					<th style="white-space: nowrap; text-align: center; color: #337AB7; width: 10px;" ng-if="isSmsEnable">
 						&nbsp;&nbsp;&nbsp;<input type="checkbox" ng-model="chk.selectorAll" ng-click="chk.selectAll($event)" />&nbsp;&nbsp;&nbsp;
 					</th>
 					<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
