--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -121,6 +121,12 @@
 									  		</select>
 								  		</div>
 									</div>
+									
+									<div class="checkbox" style="margin-left: 20px;">
+									    <label>
+									      <input type="checkbox" ng-model="formData.isNoTrace" ng-change="search()"> ยังไม่มีการติดตาม
+									    </label>
+									</div>
 									  
 								   		<div class="form-group" style="margin-left: 10px;">
 								   	  		<div class="btn-group" ng-show="!group6">
