--- a/backend/src/main/webapp/app/views/engTpl/main.html
+++ b/backend/src/main/webapp/app/views/engTpl/main.html
@@ -16,8 +16,8 @@
 	<div class="panel-heading">
 		<i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
 		
-		<div class="btn-group pull-right">
-            <button type="button" class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown" style="padding: 5px; position: relative; top: -5px;">
+		<div class="btn-group pull-right" style="position: relative; top: -5px; right: -10px;">
+            <button type="button" class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown" style="padding: 5px;">
                 &nbsp;&nbsp;&nbsp;{{ currType.name }}&nbsp;&nbsp;&nbsp;<i class="fa fa-chevron-down"></i>
             </button>
             <ul class="dropdown-menu slidedown">
