--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -487,7 +487,7 @@
          <div class="modal-content">
          	<div class="modal-header">
                 <button type="button" class="close" ng-click="templateNamedismissModal()" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">แบบฟอร์ม Notice</h4>
+                <h4 class="modal-title" id="myModalLabel">แบบฟอร์มข้อมูล</h4>
             </div>
             <div class="modal-body">            	    	
 				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
