--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -132,6 +132,15 @@
 	            <input type="radio" name="updateEmptyReminderDate" value="0" ng-checked="data.updateEmptyReminderDate == 0" ng-model="data.updateEmptyReminderDate">No
 	        </label>
        </div>
+       <div class="form-group">
+	        <label>Direct Search &nbsp;&nbsp;</label>
+	        <label class="radio-inline">
+	            <input type="radio" name="dsf" value="1" ng-checked="data.dsf == 1" ng-model="data.dsf">Yes
+	        </label>
+	        <label class="radio-inline">
+	            <input type="radio" name="dsf" value="0" ng-checked="data.dsf == 0" ng-model="data.dsf">No
+	        </label>
+       </div>
 	</div>
 	<div class="col-md-6" style="margin-top: 15px; color: #337AB7;" ng-show="group0">
 		<div class="panel panel-default">
