--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -137,9 +137,8 @@
 						<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 						<td>
 							<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)" ng-show="group1">&emsp;</i>
-							<!-- <i class="fa fa-lg" ng-class="{'fa-check-circle': data.enabled, 'fa-minus-circle': !data.enabled, 'user-action-icon-primary': data.enabled, 'user-action-icon-danger': !data.enabled}" ng-click="updateEnabled(data)" ng-show="group0"></i>&emsp; --> 
+							<i class="fa fa-lg" ng-class="{'fa-check-circle': data.enabled, 'fa-minus-circle': !data.enabled, 'user-action-icon-primary': data.enabled, 'user-action-icon-danger': !data.enabled}" ng-click="updateEnabled(data)" ng-show="group0"></i>&emsp; 
 							<i class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)" title="Download file ต้นฉบับ" ng-show="group0">&emsp;</i>
-							<!-- <i class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id, true)" title="Download file เพื่อตรวจสอบ"></i>&emsp; -->
 							<i class="fa fa-bars fa-lg user-action-icon-primary" ng-click="viewDetail(data.id)"></i>
 						</td>
 					</tr>
