--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -84,7 +84,7 @@
 		             </div>
 		             
 		             
-		             <div class="form-group">
+		             <!-- <div class="form-group">
 		                 <label>Probation &nbsp;&nbsp;</label>
 		                 <label class="radio-inline">
 		                     <input type="radio" name="probation" value="false" ng-checked="user.probation == false" ng-model="user.probation">No
@@ -92,7 +92,7 @@
 		                 <label class="radio-inline">
 		                     <input type="radio" name="probation" value="true" ng-checked="user.probation == true" ng-model="user.probation">Yes
 		                 </label>
-		             </div>
+		             </div> -->
 					
 				</div>
 			</div>
