--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -122,7 +122,13 @@
 								  		</div>
 									</div>
 									
-									<div class="checkbox" style="margin-left: 20px;">
+									&nbsp;&nbsp;
+									<div class="checkbox">
+									    <label>
+									      <input type="checkbox" ng-model="formData.isPgs" ng-change="search()"> มี ปกส.
+									    </label>
+									</div>
+									  <div class="checkbox">
 									    <label>
 									      <input type="checkbox" ng-model="formData.isNoTrace" ng-change="search()"> ยังไม่มีการติดตาม
 									    </label>
