--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -274,12 +274,15 @@
 										  <div class="col-xs-6" ng-repeat="list in dymList">
 										  	<div class="form-group">
 												<label class="control-label">{{ list.name }}</label>
+												<small style="position: absolute; right: 14px; color: #d58512" ng-show="list.isSuspend">
+													<i class="fa fa-exclamation-triangle" style="color: #d58512"></i>ซ่อนบัญชี
+												</small>
 												<div class="input-group input-group-sm">
 													<div class="input-group-btn" ng-show="list.dymListDetGroup.length > 0">
 														<select style="height: 30px; width: 25px;" name="dymList_{{ $index }}" class="input-group-addon" ng-model="list.groupSelected" ng-options="option as option.name for option in list.dymListDetGroup" ng-change="changeGroup(list)"></select>
 											  		</div>
 													<span class="input-group-addon" ng-show="list.dymListDetGroup.length == 0"><i class="fa fa-sticky-note"></i></span>
-													<select name="dymList_{{ $index }}" class="form-control" ng-model="list.dymListVal" ng-options="option._id as (option.code ?  option.meaning + ' [' + option.code + ']' : option.meaning) for option in list.dymListDet">
+													<select name="dymList_{{ $index }}" class="form-control" ng-model="list.dymListVal" ng-options="option._id as (option.code ?  option.meaning + ' [' + option.code + ']' : option.meaning) for option in list.dymListDet" ng-change="askModalObj.selectedChange(list)">
 														<option value="">--Select--</option>
 											  		</select>
 										  		</div>
